--- a/characters/index.html
+++ b/characters/index.html
@@ -12,6 +12,9 @@
 
         </section>
     </main>
+    <div class="modal-loader">
+        <div class="loader"></div>
+    </div>
     <script type="module" src="../code/index.js"></script>
 </body>
 </html>
