fixed go to characters page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-    <div class="btns">\
-        <a class="button" href="/characters/" id="characters">Characters</a>
+    <div class="btns">
+        <a class="button" href="./characters/" id="characters">Characters</a>
         <!-- <div class="button" id="get">GET</div>
         <div class="button" id="post">POST</div>
         <div class="button" id="put">PUT</div>
